grid dataset generation

--- a/20210302-generate-datasets.ipynb
+++ b/20210302-generate-datasets.ipynb
@@ -194,6 +194,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_grid():\n",
+    "    \n",
+    "    a_large_spaced = np.linspace(-1., 1., 5)\n",
+    "    a_small_spaced = np.linspace(-1., 1., 50)\n",
+    "    \n",
+    "    for a1 in a_large_spaced:\n",
+    "        for a2 in a_small_spaced:\n",
+    "        \n",
+    "    data = gen_grid_dataset(a_space, a_space)\n",
+    "    plt.scatter(data['A'][:,0], data['A'][:,1], 1)\n",
+    "    visualize(data, 5, 5)\n",
+    "    \n",
+    "test_linspace()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
