added keras session cleanup (did not help much)

--- a/20210303-vae2.ipynb
+++ b/20210303-vae2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -30,7 +30,18 @@
     "id": "OoMQk_5c4UYm",
     "outputId": "02cc896f-38e0-4a92-81ce-c20a7322369d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -486,6 +497,7 @@
     "        return\n",
     "    \n",
     "    print(\"building and training vae, build_params=%s\" % str(build_params))\n",
+    "    keras.backend.clear_session()\n",
     "    autoencoder = build_autoencoder((64, 64, 1), 2, build_params)\n",
     "    train_model(autoencoder, dataset, val_dataset, build_params, suffix)\n",
     "\n",
@@ -503,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +526,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -534,19 +546,43 @@
       "*** run({'epochs': 5, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_5-0)\n",
       "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_5-0.png exists, skipping ...\n",
       "*** run({'epochs': 5, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_5-1)\n",
-      "building and training vae, build_params={'epochs': 5, 'convs': [16, 8, 8]}\n",
-      "Models weights saved to 20210303-vae2/rand_100k-grid_10_1000/trained-models/convs_16_8_8-epochs_5-1 ...\n",
-      "running vae, saving visualization into 20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_5-1.png\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_5-1.png exists, skipping ...\n",
       "*** run({'epochs': 5, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_5-2)\n",
-      "building and training vae, build_params={'epochs': 5, 'convs': [16, 8, 8]}\n",
-      "Models weights saved to 20210303-vae2/rand_100k-grid_10_1000/trained-models/convs_16_8_8-epochs_5-2 ...\n",
-      "running vae, saving visualization into 20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_5-2.png\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_5-2.png exists, skipping ...\n",
       "*** run({'epochs': 5, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_5-3)\n",
-      "building and training vae, build_params={'epochs': 5, 'convs': [16, 8, 8]}\n",
-      "Models weights saved to 20210303-vae2/rand_100k-grid_10_1000/trained-models/convs_16_8_8-epochs_5-3 ...\n",
-      "running vae, saving visualization into 20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_5-3.png\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_5-3.png exists, skipping ...\n",
       "*** run({'epochs': 5, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_5-4)\n",
-      "building and training vae, build_params={'epochs': 5, 'convs': [16, 8, 8]}\n"
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_5-4.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-0)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-0.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-1)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-1.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-2)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-2.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-3)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-3.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-4)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-4.png exists, skipping ...\n",
+      "*** run({'epochs': 25, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_25-0)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_25-0.png exists, skipping ...\n",
+      "*** run({'epochs': 25, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_25-1)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_25-1.png exists, skipping ...\n",
+      "*** run({'epochs': 25, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_25-2)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_25-2.png exists, skipping ...\n",
+      "*** run({'epochs': 25, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_25-3)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_25-3.png exists, skipping ...\n",
+      "*** run({'epochs': 25, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_25-4)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_25-4.png exists, skipping ...\n",
+      "*** run({'epochs': 50, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_50-0)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_50-0.png exists, skipping ...\n",
+      "*** run({'epochs': 50, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_50-1)\n",
+      "20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_50-1.png exists, skipping ...\n",
+      "*** run({'epochs': 50, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_50-2)\n",
+      "building and training vae, build_params={'epochs': 50, 'convs': [16, 8, 8]}\n",
+      "Models weights saved to 20210303-vae2/rand_100k-grid_10_1000/trained-models/convs_16_8_8-epochs_50-2 ...\n",
+      "running vae, saving visualization into 20210303-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_50-2.png\n",
+      "*** run({'epochs': 50, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_50-3)\n",
+      "building and training vae, build_params={'epochs': 50, 'convs': [16, 8, 8]}\n"
      ]
     }
    ],
