--- a/20210303-vae2.ipynb
+++ b/20210303-vae2.ipynb
@@ -6,12 +6,17 @@
    "source": [
     "Wednesday 3/03/2021\n",
     "\n",
-    "* DONE: Use grid L0/L1 space for visualization\n",
-    "* INPROGRESS: Train and run autoencoder for different number of epochs. Run several times with same settings. Assess impact.\n",
+    "* Use grid L0/L1 space for visualization\n",
+    "* Train and run autoencoder for different number of epochs. Run several times with same settings. Assess impact.\n",
+    " * Learned L0/A0 and L1/A1 are unstable (good mapping between L0/A0 observed yesterda was a sheer luck).\n",
+    " * model.fit() leaks memory, need external spawner for batch jobs like this\n",
     "\n",
     "Next:\n",
     "\n",
-    "* Explore impact of changing filters chain down to (2,2,2)\n",
+    "* Visualize YYs (third output sheet or animated GIF) to assess decoder performance\n",
+    "* Rerun with [2, 10, 50] epochs\n",
+    "* Explore impact of changing filters chain down to 2x (2,2)\n",
+    "\n",
     "* Scatterplot 3D\n",
     "* How does it fluctuate depending on network architecture, nlats, training protocol, etc\n",
     "* Explore fold area in L0/L1 space. For each frame show:\n",
