--- a/20210303-generate-grid-dataset.ipynb
+++ b/20210303-generate-grid-dataset.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " * Generate grid spaced dataset, save in 'dataset-grid-10-100.pickle' and 'dataset-grid-10-1000.pickle'"
+    " * Generate grid spaced dataset, save in 'datasets/dataset-grid-10-100.pickle' and 'datasets/dataset-grid-10-1000.pickle'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -21,7 +21,6 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "dataset-grid-10-100.pickle\n",
     "import numpy as np\n",
     "\n",
     "%matplotlib inline\n",
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -214,6 +213,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize(data, N=3, M=6):\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,7 +245,7 @@
    ],
    "source": [
     "dataset = gen_data2(np.array(list(a_grid_generator(5, 50))))\n",
-    "save_dataset(dataset, 'dataset-grid-5-50.pickle')"
+    "save_dataset(dataset, 'datasets/dataset-grid-5-50.pickle')"
    ]
   },
   {
@@ -258,7 +266,7 @@
    "source": [
     "dataset = gen_data2(np.array(list(a_grid_generator(10, 100))))\n",
     "#visualize(data, 5, 5)\n",
-    "save_dataset(dataset, 'dataset-grid-10-100.pickle')"
+    "save_dataset(dataset, 'datasets/dataset-grid-10-100.pickle')"
    ]
   },
   {
@@ -279,7 +287,7 @@
    "source": [
     "dataset = gen_data2(np.array(list(a_grid_generator(10, 1000))))\n",
     "#visualize(data, 5, 5)\n",
-    "save_dataset(dataset, 'dataset-grid-10-1000.pickle')"
+    "save_dataset(dataset, 'datasets/dataset-grid-10-1000.pickle')"
    ]
   },
   {
@@ -291,16 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded_dataset = load_dataset('dataset-grid-10-100.pickle')"
+    "loaded_dataset = load_dataset('datasets/dataset-grid-10-100.pickle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
