added ani visualization of Ys/YYs

--- a/20210304-vae2.ipynb
+++ b/20210304-vae2.ipynb
@@ -4,18 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wednesday 3/03/2021\n",
-    "\n",
-    "* Use grid L0/L1 space for visualization\n",
-    "* Train and run autoencoder for different number of epochs. Run several times with same settings. Assess impact.\n",
-    " * Learned L0/A0 and L1/A1 are unstable (good mapping between L0/A0 observed yesterda was a sheer luck).\n",
-    " * model.fit() leaks memory, need external spawner for batch jobs like this\n",
-    "\n",
-    "Next:\n",
+    "Thursday 4/03/2021\n",
     "\n",
     "* Visualize YYs (third output sheet or animated GIF) to assess decoder performance\n",
     "* Rerun with [2, 10, 50] epochs\n",
     "* Explore impact of changing filters chain down to 2x (2,2)\n",
+    "* Implement beta-VAE\n",
+    "\n",
+    "Next:\n",
     "\n",
     "* Scatterplot 3D\n",
     "* How does it fluctuate depending on network architecture, nlats, training protocol, etc\n",
@@ -27,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -61,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,16 +141,29 @@
     "    if title is not None:\n",
     "        fig.suptitle(\"%s (%s)\" % (title, str(img_array.shape)))\n",
     "        \n",
+    "    return fig, axs\n",
+    "\n",
+    "def plot_Y_YY(img_array1, img_array2, title=None, fig=None, axs=None):\n",
+    "    if fig is None and axs is None:\n",
+    "        fig, axs = plt.subplots(1, 2, figsize=(4, 2))\n",
+    "        \n",
+    "    _imshow(axs[0], img_array1)\n",
+    "    _imshow(axs[1], img_array2)\n",
+    "\n",
+    "    if title is not None:\n",
+    "        fig.suptitle(title)\n",
+    "        \n",
     "    return fig, axs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# _=plot_Ys(dataset['Y'][0:10,...], title=\"First 10 elements of dataset['Y']\", ncols=5)"
+    "# _=plot_Ys(dataset['Y'][0:10,...], title=\"First 10 elements of dataset['Y']\", ncols=5)\n",
+    "# _=plot_Y_YY(dataset_grid['Y'][0], dataset_grid_out['YY'][0])"
    ]
   },
   {
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,21 +412,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models.vae import build_autoencoder\n",
-    "#autoencoder = build_autoencoder((64, 64, 1), 2)"
+    "from models.vae import build_autoencoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#load_models_weights(autoencoder, \"20210302-vae\") # NB: build the model first"
+    "#build_params = {'epochs': 2, 'convs': [16, 8, 8]}\n",
+    "#autoencoder = build_autoencoder((64, 64, 1), 2, build_params)\n",
+    "\n",
+    "#load_models_weights(autoencoder, \"trained-models/20210302-vae\") # NB: build the model first\n",
+    "# or\n",
+    "#train_model(autoencoder, dataset, val_dataset, build_params, \"test1037\")"
    ]
   },
   {
@@ -429,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,20 +451,42 @@
     "dataset = load_dataset('datasets/dataset-random-100k.mdict.pickle')\n",
     "dataset_grid = load_dataset('datasets/dataset-grid-10-1000.pickle')\n",
     "\n",
-    "val_dataset = load_dataset('datasets/dataset-random-10k.mdict.pickle')\n",
-    "val_dataset = {'A': val_dataset['A'][:500], 'Y': val_dataset['Y'][:500]} # take a piece"
+    "dataset_val = load_dataset('datasets/dataset-random-10k.mdict.pickle')\n",
+    "dataset_val = {'A': dataset_val['A'][:500], 'Y': dataset_val['Y'][:500]} # take a piece"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from matplotlib import animation\n",
+    "\n",
+    "def animate_Y_YYs(ys, yys, outfile):\n",
+    "    fig, axs = plt.subplots(1, 2, figsize=(4, 2))\n",
+    "    fig.tight_layout()\n",
+    "\n",
+    "    _clean_ax(axs[0])\n",
+    "    _clean_ax(axs[1])\n",
+    "\n",
+    "    def animate(frame):\n",
+    "        _imshow(axs[0], ys[frame])\n",
+    "        _imshow(axs[1], yys[frame])\n",
+    "        return (fig,)\n",
+    "\n",
+    "    N = ys.shape[0]\n",
+    "    assert(N == yys.shape[0])\n",
+    "    ani = animation.FuncAnimation(fig, animate, frames=range(N), blit=True)\n",
+    "    ani.save(outfile)\n",
+    "    fig.clf()\n",
+    "    \n",
+    "    return None"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -459,7 +494,7 @@
    "source": [
     "import os, datetime\n",
     "\n",
-    "BASE_DIR = \"20210303-vae2/rand_100k-grid_10_1000\"\n",
+    "BASE_DIR = \"20210304-vae2/rand_100k-grid_10_1000\"\n",
     "TENSORBOARD_LOGS_DIR =  \"%s/tensorboard-logs\" % BASE_DIR\n",
     "TRAINED_MODELS_DIR = \"%s/trained-models\" % BASE_DIR\n",
     "IMGS_DIR = \"%s/imgs\" % BASE_DIR\n",
@@ -480,11 +515,12 @@
     "    \n",
     "    save_models_weights(model, \"%s/%s\" % (TRAINED_MODELS_DIR, suffix))\n",
     "    \n",
-    "def run(dataset, val_dataset, build_params, suffix):\n",
+    "def cycle(dataset, dataset_grid, dataset_val, build_params, suffix):\n",
     "    print(\"*** run(%s, %s)\" % (str(build_params), suffix))\n",
     "    \n",
-    "    vis_fname = \"%s/%s.png\" % (IMGS_DIR, suffix)\n",
-    "    vis_fname2 = \"%s/%s-2.png\" % (IMGS_DIR, suffix)\n",
+    "    vis_fname = \"%s/%sa.png\" % (IMGS_DIR, suffix)\n",
+    "    vis_fname2 = \"%s/%sb.png\" % (IMGS_DIR, suffix)\n",
+    "    ani_fname = \"%s/%s.mp4\" % (IMGS_DIR, suffix)\n",
     "    \n",
     "    if os.path.isfile(vis_fname):\n",
     "        print(\"%s exists, skipping ...\" % vis_fname)\n",
@@ -493,9 +529,9 @@
     "    print(\"building and training vae, build_params=%s\" % str(build_params))\n",
     "    keras.backend.clear_session()\n",
     "    autoencoder = build_autoencoder((64, 64, 1), 2, build_params)\n",
-    "    train_model(autoencoder, dataset, val_dataset, build_params, suffix)\n",
+    "    train_model(autoencoder, dataset, dataset_val, build_params, suffix)\n",
     "\n",
-    "    print(\"running vae, saving visualization into %s\" % (vis_fname))\n",
+    "    print(\"running vae on grid dataset, saving visualization into %s\" % (vis_fname))    \n",
     "    dataset_grid_out = cycle_autoencoder(autoencoder, dataset_grid, vae=True, display=False)\n",
     "    \n",
     "    fig, axs = visualize_lat_space(dataset_grid, dataset_grid_out, sheet=1)\n",
@@ -504,16 +540,44 @@
     "    \n",
     "    fig, axs = visualize_lat_space(dataset_grid, dataset_grid_out, sheet=2)\n",
     "    fig.savefig(vis_fname2)\n",
-    "    fig.clf()\n"
+    "    fig.clf()\n",
+    "\n",
+    "    NANIFRAMES = 20\n",
+    "    print(\"saving ani visualization (for %d datapoints from grid dataset) into %s\" % (NANIFRAMES, ani_fname))\n",
+    "    rng = np.random.default_rng()\n",
+    "    ani_i = rng.choice(range(dataset_grid['Y'].shape[0]), size=NANIFRAMES) # choose 20 random items from the dataset_grid\n",
+    "    animate_Y_YYs(dataset_grid['Y'][ani_i], dataset_grid_out['YY'][ani_i], outfile=ani_fname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run({'epochs': 5, 'convs': [16, 8, 4, 2]}, \"test-conv_16_8_4-epochs_%d-%d\" % (epochs, i))"
+    "build_params = {'epochs': 2, 'convs': [16, 8, 8]}\n",
+    "autoencoder = build_autoencoder((64, 64, 1), 2, build_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load_models_weights(autoencoder, \"trained-models/20210302-vae\") # NB: build the model first\n",
+    "#train_model(autoencoder, dataset, dataset_val, build_params, \"test1037\")\n",
+    "#dataset_val_out = cycle_autoencoder(autoencoder, dataset_val, vae=True)\n",
+    "#animate_Y_YYs(dataset_val['Y'][:20], dataset_val_out['YY'][:20], outfile='test-animate_Y_YYs.mp4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cycle(dataset, dataset_grid, None, {'epochs': 1, 'convs': [16, 8, 8]}, \"test-cycle\")"
    ]
   },
   {
@@ -522,29 +586,56 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** run({'epochs': 1, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_1-0)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_1-0a.png exists, skipping ...\n",
+      "*** run({'epochs': 1, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_1-1)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_1-1a.png exists, skipping ...\n",
+      "*** run({'epochs': 1, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_1-2)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_1-2a.png exists, skipping ...\n",
+      "*** run({'epochs': 1, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_1-3)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_1-3a.png exists, skipping ...\n",
+      "*** run({'epochs': 1, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_1-4)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_1-4a.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-0)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-0a.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-1)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-1a.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-2)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-2a.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-3)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-3a.png exists, skipping ...\n",
+      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-4)\n",
+      "20210304-vae2/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-4a.png exists, skipping ...\n",
+      "*** run({'epochs': 50, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_50-0)\n",
+      "building and training vae, build_params={'epochs': 50, 'convs': [16, 8, 8]}\n"
+     ]
+    }
+   ],
    "source": [
-    "for epochs in [1, 5, 10, 25, 50]:\n",
+    "for epochs in [1, 10, 50]:\n",
     "    for i in range(5):\n",
     "        suffix = \"convs_16_8_8-epochs_%d-%d\" % (epochs, i)\n",
-    "        run(dataset, val_dataset, {'epochs': epochs, 'convs': [16, 8, 8]}, suffix)"
+    "        cycle(dataset, dataset_grid, None, {'epochs': epochs, 'convs': [16, 8, 8]}, suffix)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "for epochs in [100]:\n",
     "    for i in range(5):\n",
     "        suffix = \"convs_16_8_8-epochs_%d-%d\" % (epochs, i)\n",
-    "        run(dataset, val_dataset, {'epochs': epochs, 'convs': [16, 8, 8]}, suffix)\n",
+    "        cycle(dataset, val_dataset, {'epochs': epochs, 'convs': [16, 8, 8]}, suffix)\n",
     "        \n",
     "for epochs in [5, 25, 50, 100]:\n",
     "    for i in range(5):\n",
     "        suffix = \"convs_16_8_4-epochs_%d-%d\" % (epochs, i)\n",
-    "        run(dataset, val_dataset, {'epochs': epochs, 'convs': [16, 8, 4]}, suffix)"
+    "        cycle(dataset, val_dataset, {'epochs': epochs, 'convs': [16, 8, 4]}, suffix)"
    ]
   },
   {
