a copy of vae.py

--- a/models/cvae.ipynb
+++ b/models/cvae.ipynb
@@ -294,7 +294,7 @@
     "class CVAE(tf.keras.Model):\n",
     "  \"\"\"Convolutional variational autoencoder.\"\"\"\n",
     "\n",
-    "  def __init__(self, latent_dim):\n",
+    "  def __init__(self, latent_dim, model):\n",
     "    super(CVAE, self).__init__()\n",
     "    self.latent_dim = latent_dim\n",
     "    self.encoder = tf.keras.Sequential(\n",
