--- a/20210304-beta-vae.ipynb
+++ b/20210304-beta-vae.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Thursday 4/03/2021\n",
     "\n",
-    "* Implement beta-VAE\n",
+    "* Implemented sigma-VAE\n",
     "\n",
     "Next:\n",
     "\n",
@@ -583,30 +583,10 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-0)\n",
-      "20210304-beta-vae/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-0a.png exists, skipping ...\n",
-      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-1)\n",
-      "20210304-beta-vae/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-1a.png exists, skipping ...\n",
-      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-2)\n",
-      "20210304-beta-vae/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-2a.png exists, skipping ...\n",
-      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-3)\n",
-      "building and training vae, build_params={'epochs': 10, 'convs': [16, 8, 8]}\n",
-      "Models weights saved to 20210304-beta-vae/rand_100k-grid_10_1000/trained-models/convs_16_8_8-epochs_10-3 ...\n",
-      "running vae on grid dataset, saving visualization into 20210304-beta-vae/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-3a.png\n",
-      "saving ani visualization (for 20 datapoints from grid dataset) into 20210304-beta-vae/rand_100k-grid_10_1000/imgs/convs_16_8_8-epochs_10-3.mp4\n",
-      "*** run({'epochs': 10, 'convs': [16, 8, 8]}, convs_16_8_8-epochs_10-4)\n",
-      "building and training vae, build_params={'epochs': 10, 'convs': [16, 8, 8]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for epochs in [10, 25]:\n",
-    "    for i in range(5):\n",
+    "for epochs in [25, 50]:\n",
+    "    for i in range(10):\n",
     "        suffix = \"convs_16_8_8-epochs_%d-%d\" % (epochs, i)\n",
     "        cycle(dataset, dataset_grid, None, {'epochs': epochs, 'convs': [16, 8, 8]}, suffix)"
    ]
