--- a/README.ipynb
+++ b/README.ipynb
@@ -40,7 +40,10 @@
     "XXXFACTORIALXXX\n",
     "https://arxiv.org/pdf/1802.05983.pdf\n",
     "\n",
-    "https://www.tensorflow.org/tutorials/generative/cvae"
+    "https://www.tensorflow.org/tutorials/generative/cvae\n",
+    "\n",
+    "YAPONETS\n",
+    "https://github.com/miyosuda/disentangled_vae"
    ]
   }
  ],
